# gluster-block

./: .gitignore  .travis.yml  CONTRIBUTING.md  INSTALL  MAINTAINERS.md  Makefile  Makefile.am  NEWS  README.md  Vagrantfile  autogen.sh  common.c  common.h  configure.ac  glfs-operations.c  glfs-operations.h  gluster-block.c  gluster-block.spec.in  gluster-blockd.c  playbook.yml  snapcraft.yaml  ssh-common.c  ssh-common.h  utils.c  utils.h  version.h
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE  PULL_REQUEST_TEMPLATE.md
ansible/: playbook.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/initiator/tasks/: install.yml  main.yml  service.yml
ansible/roles/initiator/vars/: main.yml
ansible/roles/servers/tasks/: install.yml  main.yml  service.yml
ansible/roles/servers/vars/: main.yml
cli/: Makefile.am  gluster-block.c
daemon/: Makefile.am  gluster-blockd.c
docs/: Makefile.am  gluster-block.8  gluster-blockd.8  glusto_framework.md
extras/: Makefile.am  clang-checker.sh  gluster-block.logrotate  gluster-blockd.logrotate  replace-node.sh  upgrade_activities.sh  wait-for-bricks.sh
extras/docker/: Dockerfile.buildtest  Dockerfile.centos7  Dockerfile.fedora29
rpc/: Makefile.am  block.h  block.x  block_clnt.c  block_common.h  block_create.c  block_delete.c  block_genconfig.c  block_info.c  block_list.c  block_modify.c  block_reload.c  block_replace.c  block_svc.c  block_svc_routines.c  block_version.c  block_xdr.c  glfs-operations.c  glfs-operations.h
rpc/rpcl/: Makefile.am  block.x  block_svc.h  rpc-pragmas.h
systemd/: Makefile.am  gluster-block-target.service  gluster-block-target.service.in  gluster-blockd.initd.in  gluster-blockd.service  gluster-blockd.service.in  gluster-blockd.sysconfig
tests/: Makefile.am  basic.t  gfapi-test.c
tests/glusterfs/: wait-for-bricks-test.sh
tests/glusto-tests/: test_create_with_different_options.py  test_delete.py  test_modify.py
utils/: Makefile.am  capabilities.c  capabilities.h  common.c  common.h  dyn-config.c  gluster-block-caps.info  lru.c  lru.h  utils.c  utils.h
